Update SearchService.java